Added new section with mobile overlap

--- a/_factory_sections.html
+++ b/_factory_sections.html
@@ -99,7 +99,7 @@
                                 <img src="/images/uploads/cards-sample-1.jpg" alt="image of someone using the product" width="450" height="500" loading="lazy">
                             </picture>
                         </div>
-                        <div class="pd-section-2-image-overlay"></div>                                                  
+                        <div class="pd-section-2-image-overlay"></div>                         
                     </article>
                 </div>
                 <div class="row">
@@ -107,7 +107,7 @@
                         <header>
                             <h2>Feature 2</h2>
                             <div class="pd-section-2-headline">
-                                <p><strong>Donec ut diam et enim feugiat posuere. Vivamus arcu lacus,</strong></p>
+                                <p><strong>Donec ut diam et enim feugiat posuere. Vivamus arcu lacus</strong></p>
                             </div>
                         </header>                         
                         <div class="pd-section-1-para">
@@ -121,7 +121,7 @@
                                 <img src="/images/uploads/cards-sample-2.jpg" alt="image of someone using the product" width="450" height="500" loading="lazy">
                             </picture>
                         </div>
-                        <div class="pd-section-2-image-overlay"></div>                                                  
+                        <div class="pd-section-2-image-overlay"></div>                         
                     </article>
                 </div>
             </div>
@@ -129,6 +129,62 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-3</p>
+            </div>
+        </section>
+        <section class="pb-5 pd-section-3 pt-5">
+            <div class="container">
+                <div class="row">
+                    <article class="col-md-4">
+                        <div class="pd-section-3-image-outer">
+                            <img src="images/uploads/section-example-1.jpg">
+                        </div>                                                  
+                    </article>
+                    <article class="col-md-8 d-flex flex-column justify-content-center p-4">
+                        <header>
+                            <h2>Feature 1</h2>
+                            <div class="pd-section-3-headline">
+                                <p><strong>Donec ut diam et enim feugiat posuere. Vivamus arcu lacus</strong></p>
+                            </div>
+                        </header>                         
+
+                        <div class="pd-section-3-para">
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        </div>                         
+                    </article>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-4</p>
+            </div>
+        </section>
+        <section class="pd-section-4">
+            <div class="container">
+                <div class="row">
+                    <article class="col-lg-4 order-2 order-lg-1" style="position: relative;">
+                        <div class="align-items-center d-flex flex-column justify-content-start pd-section-4-image-outer">
+                            <img src="images/uploads/section-example-2.jpg">
+                        </div>                                                  
+                    </article>
+                    <article class="col-lg-8 d-flex flex-column justify-content-center order-1 order-lg-2 p-4" style="min-height: 450px;">
+                        <header>
+                            <h2>Feature 1</h2>
+                            <div class="pd-section-4-headline">
+                                <p><strong>Cras justo odio, dapibus ac facilisis in, egestas.</strong></p>
+                            </div>
+                        </header>                         
+
+                        <div class="pd-section-4-para">
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        </div>                         
+                    </article>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-5</p>
             </div>
         </section>
         <script src="assets/js/popper.min.js"></script>
