Added new tweaks to sections

--- a/_factory_sections.html
+++ b/_factory_sections.html
@@ -26,7 +26,7 @@
                 <article class="pb-3 row">
                     <div class="align-items-start col-md-6 d-flex flex-column justify-content-center order-2 order-md-1 p-3">
                         <header>
-                            <h2>Feature 1</h2>
+                            <h3>Feature 1</h3>
                             <div class="pd-section-1-headline">
                                 <p><strong>Cras justo odio, dapibus ac facilisis in, egestas.</strong></p>
                             </div>
@@ -50,7 +50,7 @@
                 <article class="row">
                     <div class="align-items-start col-md-6 d-flex flex-column justify-content-center order-1 p-3">
                         <header>
-                            <h2>Feature 2</h2>
+                            <h3>Feature 2</h3>
                             <div class="pd-section-1-headline">
                                 <p><strong>Donec ut diam et enim feugiat posuere. Vivamus arcu lacus,</strong></p>
                             </div>
@@ -81,7 +81,7 @@
         <section class="pb-5 pd-section-2 pt-5">
             <div class="container">
                 <div class="row">
-                    <article class="align-items-start col-md-6 d-flex flex-column justify-content-center order-2 order-md-1 p-4">
+                    <article class="align-items-start col-md-6 d-flex flex-column justify-content-center order-2 order-md-1 p-3 p-lg-5">
                         <header>
                             <h2>Feature 1</h2>
                             <div class="pd-section-2-headline">
@@ -103,7 +103,7 @@
                     </article>
                 </div>
                 <div class="row">
-                    <article class="align-items-start col-md-6 d-flex flex-column justify-content-center order-2 order-md-2 p-4">
+                    <article class="align-items-start col-md-6 d-flex flex-column justify-content-center order-2 order-md-2 p-3 p-lg-5">
                         <header>
                             <h2>Feature 2</h2>
                             <div class="pd-section-2-headline">
@@ -167,7 +167,7 @@
                             <img src="images/uploads/section-example-2.jpg">
                         </div>                                                  
                     </article>
-                    <article class="col-lg-8 d-flex flex-column justify-content-center order-1 order-lg-2 p-4" style="min-height: 450px;">
+                    <article class="col-lg-8 d-flex flex-column justify-content-center order-1 order-lg-2 p-4 pd-section-4-text-outer">
                         <header>
                             <h2>Feature 1</h2>
                             <div class="pd-section-4-headline">
