Added new sections

--- a/_factory_sections.html
+++ b/_factory_sections.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Blank Template for Bootstrap</title>
+        <title>Sections</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom styles for this template -->
@@ -136,8 +136,11 @@
                 <div class="row">
                     <article class="col-md-4">
                         <div class="pd-section-3-image-outer">
-                            <img src="images/uploads/section-example-1.jpg">
-                        </div>                                                  
+                            <picture>
+                                <source srcset="/images/uploads/section-example-1.webp" type="image/webp">
+                                <img src="images/uploads/section-example-1.jpg" width="200" height="400" alt="image of app" loading="lazy">
+                            </picture>
+                        </div>                         
                     </article>
                     <article class="col-md-8 d-flex flex-column justify-content-center p-4">
                         <header>
@@ -146,7 +149,6 @@
                                 <p><strong>Donec ut diam et enim feugiat posuere. Vivamus arcu lacus</strong></p>
                             </div>
                         </header>                         
-
                         <div class="pd-section-3-para">
                             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                         </div>                         
@@ -162,10 +164,13 @@
         <section class="pd-section-4">
             <div class="container">
                 <div class="row">
-                    <article class="col-lg-4 order-2 order-lg-1" style="position: relative;">
-                        <div class="align-items-center d-flex flex-column justify-content-start pd-section-4-image-outer">
-                            <img src="images/uploads/section-example-2.jpg">
-                        </div>                                                  
+                    <article class="align-items-center col-lg-4 d-flex flex-column justify-content-start order-2 order-lg-1" style="position: relative;">
+                        <div class="pd-section-4-image-outer">
+                            <picture>
+                                <source srcset="/images/uploads/section-example-2.webp" type="image/webp">
+                                <img src="/images/uploads/section-example-2.jpg" width="200" height="400" alt="image of app" loading="lazy">
+                            </picture>
+                        </div>                         
                     </article>
                     <article class="col-lg-8 d-flex flex-column justify-content-center order-1 order-lg-2 p-4 pd-section-4-text-outer">
                         <header>
@@ -174,7 +179,6 @@
                                 <p><strong>Cras justo odio, dapibus ac facilisis in, egestas.</strong></p>
                             </div>
                         </header>                         
-
                         <div class="pd-section-4-para">
                             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                         </div>                         
@@ -185,6 +189,102 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-5</p>
+            </div>
+        </section>
+        <section class="pd-section-5">
+            <div class="container">
+                <div class="row">
+                    <article class="align-items-center col-lg-4 d-flex flex-column justify-content-start order-2 order-lg-1" style="position: relative;">
+                        <div class="pd-section-5-image-outer">
+                            <picture>
+                                <img src="/images/uploads/section-example-3.png" width="200" height="400" alt="image of app" loading="lazy">
+                            </picture>
+                        </div>                         
+                    </article>
+                    <article class="col-lg-8 d-flex flex-column justify-content-center order-1 order-lg-2 p-4 pd-section-5-text-outer">
+                        <header>
+                            <h2>Feature 1</h2>
+                            <div class="pd-section-5-headline">
+                                <p><strong>Cras justo odio, dapibus ac facilisis in, egestas.</strong></p>
+                            </div>
+                        </header>                         
+                        <div class="pd-section-5-para">
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        </div>                         
+                    </article>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-6</p>
+            </div>
+        </section>
+        <section class="pd-section-6">
+            <div class="container">
+                <div class="row">
+                    <article class="align-items-center col-lg-4 d-flex flex-column justify-content-start order-2 order-lg-1" style="position: relative;">
+                        <div class="pd-section-6-image-outer">
+                            <picture>
+                                <img src="/images/uploads/section-example-3.png" width="200" height="400" alt="image of app" loading="lazy">
+                            </picture>
+                        </div>                         
+                    </article>
+                    <article class="col-lg-8 d-flex flex-column justify-content-center order-1 order-lg-2 p-4 pd-section-6-text-outer">
+                        <header>
+                            <h2>Feature 1</h2>
+                            <div class="pd-section-6-headline">
+                                <p><strong>Cras justo odio, dapibus ac facilisis in, egestas.</strong></p>
+                            </div>
+                        </header>                         
+                        <div class="pd-section-6-para">
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        </div>                         
+                    </article>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-7</p>
+            </div>
+        </section>
+        <section class="pd-section-7" style="position: relative;">
+            <div class="pd-section-7-background-image-outer">
+                <picture>
+                    <source srcset="/images/uploads/hero-testimonials.webp 1800w, 
+                                    /images/uploads/hero-testimonials-mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp">
+                    <img srcset="/images/uploads/hero-testimonials.jpg 1800w,
+                                /images/uploads/hero-testimonials-mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-testimonials.jpg" loading="lazy"/>
+                </picture>
+            </div>
+            <div class="pd-section-7-image-overlay"></div>
+            <div class="container" style="position: relative; z-index: 2;">
+                <div class="row">
+                    <article class="align-items-center col-lg-4 d-flex flex-column justify-content-start order-2 order-lg-1" style="position: relative;">
+                        <div class="pd-section-7-image-outer">
+                            <picture>
+                                <img src="/images/uploads/section-example-3.png" width="200" height="400" alt="image of app" loading="lazy">
+                            </picture>
+                        </div>                         
+                    </article>
+                    <article class="col-lg-8 d-flex flex-column justify-content-center order-1 order-lg-2 p-4 pd-section-7-text-outer">
+                        <header>
+                            <h2>Feature 1</h2>
+                            <div class="pd-section-7-headline">
+                                <p><strong>Cras justo odio, dapibus ac facilisis in, egestas.</strong></p>
+                            </div>
+                        </header>                         
+                        <div class="pd-section-7-para">
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        </div>                         
+                    </article>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-8</p>
             </div>
         </section>
         <script src="assets/js/popper.min.js"></script>
