--- a/_factory_testimonials.html
+++ b/_factory_testimonials.html
@@ -346,7 +346,7 @@
             <div class="container pb-4" style="position: relative; z-index: 1;">
                 <div class="row">
                     <div class="col pb-3 text-center">
-                        <h2 class="text-center">Testimonial</h2> 
+                        <h2 class="text-center">Testimonials</h2> 
                     </div>
                 </div>
             </div>
