--- a/_factory_testimonial_sliders.html
+++ b/_factory_testimonial_sliders.html
@@ -19,25 +19,40 @@
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-slider-1</p>
             </div>
         </section>
-        <section class="pd-testimonial-slider-1" style="position: relative;">
+        <section class="pd-testimonial-slider-1" style="position: relative;" id="pd-testimonial-slider-1">
             <header class="container pb-4">
                 <div class="row">
-                    <div class="col pb-3">
-                        <h2 class="text-center">Testimonial</h2> 
+                    <div class="col pb-3 text-center">
+                        <h2 class="text-center">Testimonials</h2> 
                     </div>
                 </div>
             </header>
             <article class="container">
                 <div class="row">
                     <div class="col" style="position: relative;">
-                        <div class="glide">
+                        <div class="glide" data-glide='{"type": "carousel", 
+                            "startAt": 0, 
+                            "perView": 1}' style="position: relative;">
                             <div class="glide__track" data-glide-el="track">
                                 <ul class="glide__slides">
                                     <li class="glide__slide">
                                         <article>
-                                            <div class="pd-testimonial-slider-1-mainText pe-3 pe-lg-5 ps-3 ps-lg-5">
+                                            <div class=" pd-testimonial-slider-1-mainText pe-4 pe-lg-5 ps-4 ps-lg-5">
                                                 <div class="pd-testimonial-slider-1-quotation text-center">
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ullamcorper justo sed eros sagittis, nec consectetur quam fringilla. Nulla faucibus rhoncus libero, at efficitur diam lobortis a.</p>
+                                                </div>
+                                            </div>
+                                            <footer class="pd-testimonial-slider-1-author pe-3 pe-lg-5 ps-3 ps-lg-5">
+                                                <p class="mb-0 text-center text-md-end">Client Name</p>
+                                                <p class="fw-bolder text-center text-md-end">Client Business</p>
+                                            </footer>
+                                        </article>
+                                    </li>
+                                    <li class="glide__slide">
+                                        <article>
+                                            <div class="pd-testimonial-slider-1-mainText pe-3 pe-lg-5 ps-3 ps-lg-5">
+                                                <div class="pd-testimonial-slider-1-quotation text-center">
+                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ullamcorper justo sed eros sagittis, nec consectetur quam fringilla. Nulla faucibus rhoncus libero, at efficitur diam lobortis a. Nullam ullamcorper justo sed eros sagittis, nec consectetur quam fringilla. Nulla faucibus rhoncus libero, at efficitur diam lobortis a.</p>
                                                 </div>
                                             </div>
                                             <footer class="pd-testimonial-slider-1-author">
@@ -49,8 +64,16 @@
                                 </ul>
                             </div>
                             <div class="glide__arrows" data-glide-el="controls">
-                                <button class="glide__arrow glide__arrow--left" data-glide-dir="<">prev</button>
-                                <button class="glide__arrow glide__arrow--right" data-glide-dir=">">next</button>
+                                <button aria-label="button to go back" class="glide__arrow glide__arrow--left pd-testimonial-slider-1-arrowWrapper" data-glide-dir="<">
+                                    <img alt="icon carousel go back" width="30" height="30" src="images/design-assets/carousel-go-back-black.svg">
+                                </button>
+                                <button aria-label="button to go forward" class="glide__arrow glide__arrow--right pd-testimonial-slider-1-arrowWrapper" data-glide-dir=">">
+                                    <img width="30" height="30" alt="icon advance carousel" src="images/design-assets/carousel-advance-black.svg">
+                                </button>
+                            </div>
+                            <div class="glide__bullets" data-glide-el="controls[nav]">
+                                <button aria-label="button to go this slide" class="glide__bullet" data-glide-dir="=0"></button>
+                                <button aria-label="button to go this slide" class="glide__bullet" data-glide-dir="=1"></button>
                             </div>
                         </div>
                         <div class="left pd-testimonial-slider-1-quotes">
@@ -81,5 +104,6 @@
         <script src="assets/js/popper.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
         <script src="assets/js/glide.min.js"></script>
+        <script src="/assets/js/functions-sliders.js"></script>
     </body>
 </html>
