Added more testimonials

--- a/_factory_testimonials.html
+++ b/_factory_testimonials.html
@@ -161,7 +161,7 @@
                                 /images/uploads/hero-testimonials-mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-testimonials.jpg" loading="lazy"/>
                 </picture>
             </div>
-            <div class="pd-testimonial-4-overlay pg-empty-placeholder"></div>
+            <div class="pd-testimonial-4-overlay"></div>
             <header class="container pb-4" style="position: relative; z-index: 1;">
                 <div class="row">
                     <div class="col pb-3 text-center">
