--- a/_factory_testimonial_sliders.html
+++ b/_factory_testimonial_sliders.html
@@ -95,7 +95,206 @@
         </section>
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
-                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-1</p>
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-2</p>
+            </div>
+        </section>
+        <section class="pd-testimonial-slider-2" style="position: relative;" id="pd-testimonial-slider-2">
+            <header class="container pb-4">
+                <div class="row">
+                    <div class="col pb-3 text-center">
+                        <h2 class="text-center">Testimonials</h2> 
+                    </div>
+                </div>
+            </header>
+            <article class="container">
+                <div class="row">
+                    <div class="col" style="position: relative;">
+                        <div class="glide" data-glide='{"type": "carousel", 
+                            "startAt": 0, 
+                            "perView": 1}' style="position: relative;">
+                            <div class="glide__track" data-glide-el="track">
+                                <ul class="glide__slides">
+                                    <li class="glide__slide">
+                                        <article>
+                                            <div class="pd-testimonial-slider-2-mainText pe-4 pe-lg-5 ps-4 ps-lg-5">
+                                                <div class="pd-testimonial-slider-2-quotation text-center">
+                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ullamcorper justo sed eros sagittis, nec consectetur quam fringilla. Nulla faucibus rhoncus libero, at efficitur diam lobortis a.</p>
+                                                </div>
+                                            </div>
+                                            <footer class="pd-testimonial-slider-2-author">
+                                                <div>
+                                                    <picture>
+                                                        <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp">
+                                                        <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="140" height="140">
+                                                    </picture>
+                                                </div>
+                                                <div style="display: flex; flex-direction: column; justify-content: center;" class="ps-2">
+                                                    <p class="mb-0 text-center text-sm-start">Client Name</p>
+                                                    <p class="fw-bolder text-center text-sm-start">Client Business</p>
+                                                </div>
+                                            </footer>
+                                        </article>
+                                    </li>
+                                    <li class="glide__slide">
+                                        <article>
+                                            <div class="pd-testimonial-slider-2-mainText pe-4 pe-lg-5 ps-4 ps-lg-5">
+                                                <div class="pd-testimonial-slider-2-quotation text-center">
+                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ullamcorper justo sed eros sagittis, nec consectetur quam fringilla. Nulla faucibus rhoncus libero, at efficitur diam lobortis a.</p>
+                                                </div>
+                                            </div>
+                                            <footer class="pd-testimonial-slider-2-author">
+                                                <div>
+                                                    <picture>
+                                                        <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp">
+                                                        <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="140" height="140">
+                                                    </picture>
+                                                </div>
+                                                <div style="display: flex; flex-direction: column; justify-content: center;" class="ps-2">
+                                                    <p class="mb-0 text-center text-sm-start">Client Name</p>
+                                                    <p class="fw-bolder text-center text-sm-start">Client Business</p>
+                                                </div>
+                                            </footer>
+                                        </article>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="glide__arrows" data-glide-el="controls">
+                                <button aria-label="button to go back" class="glide__arrow glide__arrow--left pd-testimonial-slider-2-arrowWrapper" data-glide-dir="<">
+                                    <img alt="icon carousel go back" width="30" height="30" src="images/design-assets/carousel-go-back.svg">
+                                </button>
+                                <button aria-label="button to go forward" class="glide__arrow glide__arrow--right pd-testimonial-slider-2-arrowWrapper" data-glide-dir=">">
+                                    <img width="30" height="30" alt="icon advance carousel" src="images/design-assets/carousel-advance.svg">
+                                </button>
+                            </div>
+                            <div class="glide__bullets" data-glide-el="controls[nav]">
+                                <button aria-label="button to go this slide" class="glide__bullet" data-glide-dir="=0"></button>
+                                <button aria-label="button to go this slide" class="glide__bullet" data-glide-dir="=1"></button>
+                            </div>
+                        </div>
+                        <div class="left pd-testimonial-slider-2-quotes">
+                            <img alt="icon of a quote mark" width="60" height="60" src="images/design-assets/icon-quote-mark-2-white.svg">
+                        </div>
+                        <div class="pd-testimonial-slider-2-quotes right">
+                            <img alt="icon of a quote mark" width="60" height="60" src="images/design-assets/icon-quote-mark-2-white-end.svg">
+                        </div>                         
+                    </div>
+                </div>
+            </article>
+            <footer class="container pb-3 pt-5 text-end">
+                <div class="row">
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-testimonial-slider-2-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"></span></a> 
+                    </div>
+                </div>
+            </footer>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-3</p>
+            </div>
+        </section>
+        <section class="pd-testimonial-slider-3" style="position: relative;" id="pd-testimonial-slider-3">
+            <div class="pd-testimonial-4-image-wrapper">
+                <picture>
+                    <source srcset="/images/uploads/hero-testimonials.webp 1800w, 
+                                    /images/uploads/hero-testimonials-mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp">
+                    <img srcset="/images/uploads/hero-testimonials.jpg 1800w,
+                                /images/uploads/hero-testimonials-mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-testimonials.jpg" loading="lazy"/>
+                </picture>
+            </div>
+            <div class="pd-testimonial-4-overlay"></div>
+            <header class="container pb-4">
+                <div class="row">
+                    <div class="col pb-3 text-center">
+                        <h2 class="text-center">Testimonials</h2> 
+                    </div>
+                </div>
+            </header>
+            <article class="container">
+                <div class="row">
+                    <div class="col" style="position: relative;">
+                        <div class="glide" data-glide='{"type": "carousel", 
+                            "startAt": 0, 
+                            "perView": 1}' style="position: relative;">
+                            <div class="glide__track" data-glide-el="track">
+                                <ul class="glide__slides">
+                                    <li class="glide__slide">
+                                        <article>
+                                            <div class="pd-testimonial-slider-3-mainText pe-4 pe-lg-5 ps-4 ps-lg-5">
+                                                <div class="pd-testimonial-slider-3-quotation text-center">
+                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ullamcorper justo sed eros sagittis, nec consectetur quam fringilla. Nulla faucibus rhoncus libero, at efficitur diam lobortis a.</p>
+                                                </div>
+                                            </div>
+                                            <footer class="pd-testimonial-slider-3-author">
+                                                <div>
+                                                    <picture>
+                                                        <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp">
+                                                        <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="140" height="140">
+                                                    </picture>
+                                                </div>
+                                                <div style="display: flex; flex-direction: column; justify-content: center;" class="ps-2">
+                                                    <p class="mb-0 text-center text-sm-start">Client Name</p>
+                                                    <p class="fw-bolder text-center text-sm-start">Client Business</p>
+                                                </div>
+                                            </footer>
+                                        </article>
+                                    </li>
+                                    <li class="glide__slide">
+                                        <article>
+                                            <div class="pd-testimonial-slider-3-mainText pe-4 pe-lg-5 ps-4 ps-lg-5">
+                                                <div class="pd-testimonial-slider-2-quotation text-center">
+                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ullamcorper justo sed eros sagittis, nec consectetur quam fringilla. Nulla faucibus rhoncus libero, at efficitur diam lobortis a.</p>
+                                                </div>
+                                            </div>
+                                            <footer class="pd-testimonial-slider-3-author">
+                                                <div>
+                                                    <picture>
+                                                        <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp">
+                                                        <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="140" height="140">
+                                                    </picture>
+                                                </div>
+                                                <div style="display: flex; flex-direction: column; justify-content: center;" class="ps-2">
+                                                    <p class="mb-0 text-center text-sm-start">Client Name</p>
+                                                    <p class="fw-bolder text-center text-sm-start">Client Business</p>
+                                                </div>
+                                            </footer>
+                                        </article>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="glide__arrows" data-glide-el="controls">
+                                <button aria-label="button to go back" class="glide__arrow glide__arrow--left pd-testimonial-slider-3-arrowWrapper" data-glide-dir="<">
+                                    <img alt="icon carousel go back" width="30" height="30" src="images/design-assets/carousel-go-back.svg">
+                                </button>
+                                <button aria-label="button to go forward" class="glide__arrow glide__arrow--right pd-testimonial-slider-3-arrowWrapper" data-glide-dir=">">
+                                    <img width="30" height="30" alt="icon advance carousel" src="images/design-assets/carousel-advance.svg">
+                                </button>
+                            </div>
+                            <div class="glide__bullets" data-glide-el="controls[nav]">
+                                <button aria-label="button to go this slide" class="glide__bullet" data-glide-dir="=0"></button>
+                                <button aria-label="button to go this slide" class="glide__bullet" data-glide-dir="=1"></button>
+                            </div>
+                        </div>
+                        <div class="left pd-testimonial-slider-3-quotes">
+                            <img alt="icon of a quote mark" width="60" height="60" src="images/design-assets/icon-quote-mark-2-white.svg">
+                        </div>
+                        <div class="pd-testimonial-slider-3-quotes right">
+                            <img alt="icon of a quote mark" width="60" height="60" src="images/design-assets/icon-quote-mark-2-white-end.svg">
+                        </div>                         
+                    </div>
+                </div>
+            </article>
+            <footer class="container pb-3 pt-5 text-end">
+                <div class="row">
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-testimonial-slider-2-link pd-testimonial-slider-3-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"></span></a> 
+                    </div>
+                </div>
+            </footer>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-4</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
