--- a/_factory_testimonial_sliders.html
+++ b/_factory_testimonial_sliders.html
@@ -95,7 +95,7 @@
         </section>
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
-                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-2</p>
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-slider-2</p>
             </div>
         </section>
         <section class="pd-testimonial-slider-2" style="position: relative;" id="pd-testimonial-slider-2">
@@ -190,11 +190,11 @@
         </section>
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
-                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-3</p>
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-slider-3</p>
             </div>
         </section>
         <section class="pd-testimonial-slider-3" style="position: relative;" id="pd-testimonial-slider-3">
-            <div class="pd-testimonial-4-image-wrapper">
+            <div class="pd-testimonial-slider-3-image-wrapper">
                 <picture>
                     <source srcset="/images/uploads/hero-testimonials.webp 1800w, 
                                     /images/uploads/hero-testimonials-mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp">
@@ -202,7 +202,7 @@
                                 /images/uploads/hero-testimonials-mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-testimonials.jpg" loading="lazy"/>
                 </picture>
             </div>
-            <div class="pd-testimonial-4-overlay"></div>
+            <div class="pd-testimonial-slider-3-overlay"></div>
             <header class="container pb-4">
                 <div class="row">
                     <div class="col pb-3 text-center">
@@ -284,17 +284,112 @@
                     </div>
                 </div>
             </article>
-            <footer class="container pb-3 pt-5 text-end">
+            <footer class="container pb-3 pt-5 text-end" style="position: relative;">
                 <div class="row">
                     <div class="col text-center text-md-end">
-                        <a href="#" name="anchor" class="pd-testimonial-slider-2-link pd-testimonial-slider-3-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"></span></a> 
+                        <a href="#" name="anchor" class="pd-testimonial-slider-3-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"></span></a> 
                     </div>
                 </div>
             </footer>
         </section>
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
-                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-4</p>
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-slider-4</p>
+            </div>
+        </section>
+        <section class="pd-testimonial-slider-4" style="position: relative;" id="pd-testimonial-slider-4">
+            <header class="container pb-4">
+                <div class="row">
+                    <div class="col pb-3 text-center">
+                        <h2 class="text-center">Testimonials</h2> 
+                    </div>
+                </div>
+            </header>
+            <article class="container">
+                <div class="row">
+                    <div class="col" style="position: relative;">
+                        <div class="glide" data-glide='{
+                            "type": "carousel", 
+                            "startAt": 0, 
+                            "perView": 1,
+                            "breakpoints": {
+                                "1024": {"perView": 1},
+                                "2000": {"perView": 2},
+                                "5200": {"perView": 3}
+                            }
+                               
+                        }' style="position: relative;">
+                            <div class="glide__track " data-glide-el="track">
+                                <ul class="glide__slides">
+                                    <li class="glide__slide">
+                                        <article class=" pe-4 ps-4">
+                                            <div class="flex-grow-1 flex-shrink-0 p-4 pd-testimonial-slider-4-bubble position-relative">
+                                                <div>
+                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec finibus enim. Donec ut facilisis arcu. Nunc quis dignissim felis. Nulla volutpat ultrices odio, quis laoreet urna convallis vitae. Aenean nec sem quis diam venenatis pulvinar id feugiat lectus.&nbsp;Praesent pharetra risus pharetra orci ultrices, vel pharetra dolor eleifend. Donec a aliquet ex, sed gravida risus. Vivamus quis semper dui. Aliquam eget finibus felis, luctus iaculis liberoPraesent pharetra risus pharetra orci.</p>
+                                                </div>
+                                                <img alt="arrow point down for testimonial" width="30" height="30" style="position: absolute; bottom: -22px;" src="images/design-assets/icon-testimonial-arrow-white.svg"/>
+                                            </div>
+                                            <footer class="align-items-center d-flex flex-row justify-content-start mt-3 pd-testimonial-slider-4-author-wrapper">
+                                                <picture>
+                                                    <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp">
+                                                    <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="100" height="100">
+                                                </picture>
+                                                <div class="p-2">
+                                                    <h3 class="mb-0">Client Name</h3>
+                                                    <p>Business Name</p>
+                                                </div>
+                                            </footer>
+                                        </article>
+                                    </li>
+                                    <li class="glide__slide">
+                                        <article class=" pe-4 ps-4">
+                                            <div class="flex-grow-1 flex-shrink-0 p-4 pd-testimonial-slider-4-bubble position-relative">
+                                                <div>
+                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec finibus enim. Donec ut facilisis arcu. Nunc quis dignissim felis. Nulla volutpat ultrices odio, quis laoreet urna convallis vitae. Aenean nec sem quis diam venenatis pulvinar id feugiat lectus.&nbsp;Praesent pharetra risus pharetra orci ultrices, vel pharetra dolor eleifend. Donec a aliquet ex, sed gravida risus. Vivamus quis semper dui. Aliquam eget finibus felis, luctus iaculis liberoPraesent pharetra risus pharetra orci.</p>
+                                                </div>
+                                                <img alt="arrow point down for testimonial" width="30" height="30" style="position: absolute; bottom: -22px;" src="images/design-assets/icon-testimonial-arrow-white.svg"/>
+                                            </div>
+                                            <footer class="align-items-center d-flex flex-row justify-content-start mt-3 pd-testimonial-slider-4-author-wrapper">
+                                                <picture>
+                                                    <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp">
+                                                    <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="100" height="100">
+                                                </picture>
+                                                <div class="p-2">
+                                                    <h3 class="mb-0">Client Name</h3>
+                                                    <p>Business Name</p>
+                                                </div>
+                                            </footer>
+                                        </article>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="glide__arrows" data-glide-el="controls">
+                                <button aria-label="button to go back" class="glide__arrow glide__arrow--left pd-testimonial-slider-4-arrowWrapper" data-glide-dir="<">
+                                    <img alt="icon carousel go back" width="30" height="30" src="images/design-assets/carousel-go-back-black.svg">
+                                </button>
+                                <button aria-label="button to go forward" class="glide__arrow glide__arrow--right pd-testimonial-slider-4-arrowWrapper" data-glide-dir=">">
+                                    <img width="30" height="30" alt="icon advance carousel" src="images/design-assets/carousel-advance-black.svg">
+                                </button>
+                            </div>
+                            <div class="glide__bullets" data-glide-el="controls[nav]">
+                                <button aria-label="button to go this slide" class="glide__bullet" data-glide-dir="=0"></button>
+                                <button aria-label="button to go this slide" class="glide__bullet" data-glide-dir="=1"></button>
+                            </div>
+                        </div>                         
+                    </div>
+                </div>
+            </article>
+            <footer class="container pb-3 pt-5 text-end">
+                <div class="row">
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-testimonial-slider-4-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"></span></a> 
+                    </div>
+                </div>
+            </footer>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-slider-5</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
