Added equal heights for the speech bubbles

--- a/_factory_testimonial_sliders.html
+++ b/_factory_testimonial_sliders.html
@@ -313,7 +313,7 @@
                             "startAt": 0, 
                             "perView": 1,
                             "breakpoints": {
-                                "1024": {"perView": 1},
+                                "1023": {"perView": 1},
                                 "2000": {"perView": 2},
                                 "5200": {"perView": 3}
                             }
@@ -321,8 +321,8 @@
                         }' style="position: relative;">
                             <div class="glide__track " data-glide-el="track">
                                 <ul class="glide__slides">
-                                    <li class="glide__slide">
-                                        <article class=" pe-4 ps-4">
+                                    <li class="align-items-start d-flex flex-column flex-grow-1 flex-shrink-0 glide__slide justify-content-start">
+                                        <article class="align-items-start d-flex flex-column flex-grow-1 flex-shrink-0 justify-content-start pe-2 ps-2">
                                             <div class="flex-grow-1 flex-shrink-0 p-4 pd-testimonial-slider-4-bubble position-relative">
                                                 <div>
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec finibus enim. Donec ut facilisis arcu. Nunc quis dignissim felis. Nulla volutpat ultrices odio, quis laoreet urna convallis vitae. Aenean nec sem quis diam venenatis pulvinar id feugiat lectus.&nbsp;Praesent pharetra risus pharetra orci ultrices, vel pharetra dolor eleifend. Donec a aliquet ex, sed gravida risus. Vivamus quis semper dui. Aliquam eget finibus felis, luctus iaculis liberoPraesent pharetra risus pharetra orci.</p>
@@ -341,11 +341,11 @@
                                             </footer>
                                         </article>
                                     </li>
-                                    <li class="glide__slide">
-                                        <article class=" pe-4 ps-4">
+                                    <li class="align-items-start d-flex flex-column flex-grow-1 flex-shrink-0 glide__slide justify-content-start">
+                                        <article class="align-items-start d-flex flex-column flex-grow-1 flex-shrink-0 justify-content-start pe-2 ps-2">
                                             <div class="flex-grow-1 flex-shrink-0 p-4 pd-testimonial-slider-4-bubble position-relative">
                                                 <div>
-                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec finibus enim. Donec ut facilisis arcu. Nunc quis dignissim felis. Nulla volutpat ultrices odio, quis laoreet urna convallis vitae. Aenean nec sem quis diam venenatis pulvinar id feugiat lectus.&nbsp;Praesent pharetra risus pharetra orci ultrices, vel pharetra dolor eleifend. Donec a aliquet ex, sed gravida risus. Vivamus quis semper dui. Aliquam eget finibus felis, luctus iaculis liberoPraesent pharetra risus pharetra orci.</p>
+                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec finibus enim. Donec ut facilisis arcu. Nunc quis dignissim felis. Nulla volutpat ultrices odio, quis laoreet urna convallis vitae. Aliquam eget finibus felis, luctus iaculis liberoPraesent pharetra risus pharetra orci.</p>
                                                 </div>
                                                 <img alt="arrow point down for testimonial" width="30" height="30" style="position: absolute; bottom: -22px;" src="images/design-assets/icon-testimonial-arrow-white.svg"/>
                                             </div>
@@ -382,7 +382,7 @@
             <footer class="container pb-3 pt-5 text-end">
                 <div class="row">
                     <div class="col text-center text-md-end">
-                        <a href="#" name="anchor" class="pd-testimonial-slider-4-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"></span></a> 
+                        <a href="#" name="anchor" class="pd-testimonial-slider-4-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-secondary.svg"></span></a> 
                     </div>
                 </div>
             </footer>
@@ -390,6 +390,101 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-slider-5</p>
+            </div>
+        </section>
+        <section class="pd-testimonial-slider-5" style="position: relative;" id="pd-testimonial-slider-5">
+            <header class="container pb-4">
+                <div class="row">
+                    <div class="col pb-3 text-center">
+                        <h2 class="text-center">Testimonials</h2> 
+                    </div>
+                </div>
+            </header>
+            <article class="container">
+                <div class="row">
+                    <div class="col" style="position: relative;">
+                        <div class="glide" data-glide='{
+                            "type": "carousel", 
+                            "startAt": 0, 
+                            "perView": 1,
+                            "breakpoints": {
+                                "1023": {"perView": 1},
+                                "2000": {"perView": 2},
+                                "5200": {"perView": 3}
+                            }
+                               
+                        }' style="position: relative;">
+                            <div class="glide__track " data-glide-el="track">
+                                <ul class="glide__slides">
+                                    <li class="align-items-center d-flex flex-column flex-grow-1 flex-shrink-0 glide__slide justify-content-start">
+                                        <article class="align-items-start d-flex flex-column flex-grow-1 justify-content-start pe-2 ps-2">
+                                            <div class="align-items-start d-flex flex-column flex-grow-1 flex-shrink-0 justify-content-start p-4 pd-testimonial-slider-5-bubble position-relative">
+                                                <div class="flex-grow-1">
+                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec finibus enim. Donec ut facilisis arcu. Nunc quis dignissim felis. Nulla volutpat ultrices odio, quis laoreet urna convallis vitae.&nbsp;</p>
+                                                </div>
+                                                <img alt="arrow point down for testimonial" width="30" height="30" style="position: absolute; bottom: -22px;" src="images/design-assets/icon-testimonial-arrow-primary.svg"/>
+                                            </div>
+                                            <footer class="align-items-center d-flex flex-row justify-content-start mt-3 pd-testimonial-slider-5-author-wrapper">
+                                                <picture>
+                                                    <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp">
+                                                    <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="100" height="100">
+                                                </picture>
+                                                <div class="p-2">
+                                                    <h3 class="mb-0">Client Name</h3>
+                                                    <p>Business Name</p>
+                                                </div>
+                                            </footer>
+                                        </article>
+                                    </li>
+                                    <li class="align-items-center d-flex flex-column flex-grow-1 flex-shrink-0 glide__slide justify-content-start">
+                                        <article class="align-items-start d-flex flex-column flex-grow-1 justify-content-start pe-2 ps-2">
+                                            <div class="align-items-start d-flex flex-column flex-grow-1 flex-shrink-0 justify-content-start p-4 pd-testimonial-slider-5-bubble position-relative">
+                                                <div class="flex-grow-1">
+                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec finibus enim. Donec ut facilisis arcu. Nunc quis dignissim felis. Nulla volutpat ultrices odio, quis laoreet urna convallis vitae. Nunc quis dignissim felis. Nulla volutpat ultrices odio, quis laoreet urna convallis vitae.</p>
+                                                </div>
+                                                <img alt="arrow point down for testimonial" width="30" height="30" style="position: absolute; bottom: -22px;" src="images/design-assets/icon-testimonial-arrow-primary.svg"/>
+                                            </div>
+                                            <footer class="align-items-center d-flex flex-row justify-content-start mt-3 pd-testimonial-slider-5-author-wrapper">
+                                                <picture>
+                                                    <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp">
+                                                    <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="100" height="100">
+                                                </picture>
+                                                <div class="p-2">
+                                                    <h3 class="mb-0">Client Name</h3>
+                                                    <p>Business Name</p>
+                                                </div>
+                                            </footer>
+                                        </article>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="glide__arrows" data-glide-el="controls">
+                                <button aria-label="button to go back" class="glide__arrow glide__arrow--left pd-testimonial-slider-5-arrowWrapper" data-glide-dir="<">
+                                    <img alt="icon carousel go back" width="30" height="30" src="images/design-assets/carousel-go-back-black.svg">
+                                </button>
+                                <button aria-label="button to go forward" class="glide__arrow glide__arrow--right pd-testimonial-slider-5-arrowWrapper" data-glide-dir=">">
+                                    <img width="30" height="30" alt="icon advance carousel" src="images/design-assets/carousel-advance-black.svg">
+                                </button>
+                            </div>
+                            <div class="glide__bullets" data-glide-el="controls[nav]">
+                                <button aria-label="button to go this slide" class="glide__bullet" data-glide-dir="=0"></button>
+                                <button aria-label="button to go this slide" class="glide__bullet" data-glide-dir="=1"></button>
+                            </div>
+                        </div>                         
+                    </div>
+                </div>
+            </article>
+            <footer class="container pb-3 pt-5 text-end">
+                <div class="row">
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-testimonial-slider-5-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"></span></a> 
+                    </div>
+                </div>
+            </footer>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-slider-6</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
